# rpi_audio_visualizer

./: .bazelrc  .gitignore  .gitmodules  CMakeGraphVizOptions.cmake  CMakeLists.txt  README.md  WORKSPACE  pa_notes.txt  raspberry_pi_build_reqs.txt
cmake/modules/: FindFftw3.cmake
dependencies/: CMakeLists.txt  external.cmake
dependencies/cmake/modules/: FindFftw3.cmake  FindPortAudio.cmake  FindPortAudioCpp.cmake
dependencies/fftwpp/: CMakeLists.txt
dependencies/fftwpp/include/: fftw++.h
dependencies/led_matrix/: BUILD.bazel  CMakeLists.txt
dependencies/portaudio/: CMakeLists.txt
matrix/: BUILD.bazel  CMakeLists.txt
matrix/audio/: CMakeLists.txt
matrix/audio/include/: AudioManager.hpp  Defs.hpp  Recorder.hpp  RecorderStream.hpp  SamplePrinter.hpp  pa_callback.hpp
matrix/audio/include/audio/: Defs.hpp  DspPipeline.hpp  FftMagnitudePrinter.hpp  Recorder.hpp  RecorderStream.hpp  SampleCollector.hpp  SamplePrinter.hpp  melfilters.hpp
matrix/audio/src/: AudioManager.cpp  FftMagnitudePrinter.cpp  Recorder.cpp  RecorderStream.cpp  SampleCollector.cpp  SamplePrinter.cpp  pa_callback.cpp
matrix/include/rendering/: Color.hpp  Scene.hpp
matrix/include/shapes/: Shape.hpp
matrix/rendering/: CMakeLists.txt
matrix/rendering/include/rendering/: Color.hpp  ColorUtils.hpp  Coordinate.hpp  Defs.hpp  FrameBufferManager.hpp  FreqBarsRandom.hpp  GradientCycler.hpp  Pixel.hpp  Renderer.hpp  Scene.hpp  SpectrumRenderer.hpp  Visualizer.hpp
matrix/rendering/src/: Color.cpp  FrameBufferManager.cpp  GradientCycler.cpp  Pixel.cpp  Renderer.cpp  SpectrumRenderer.cpp
matrix/shapes/src/: Shape.cpp
matrix/src/rendering/: Color.cpp  Scene.cpp
plotting/: blit.py  fft_magnitudes.txt  gtk.py  plot.py  requirements.txt  samples.txt  stuff.txt
scripts/: generate_random_colors.py
