cc_library(
    name = "led_matrix",
    srcs = ["lib/librgbmatrix.a"],
    hdrs = [
        "include/canvas.h",
        "include/content-streamer.h",
        "include/deprecated-transformer.h",
        "include/gpio.h",
        "include/graphics.h",
        "include/led-matrix-c.h",
        "include/led-matrix.h",
        "include/pixel-mapper.h",
        "include/threaded-canvas-manipulator.h",
        "include/thread.h",
        "include/transformer.h",
    ],
    linkopts = ["-pthread"],
    visibility = ["//visibility:public"],
)
