add_library(led_matrix STATIC IMPORTED GLOBAL)
set_property(TARGET led_matrix PROPERTY IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/lib/librgbmatrix.a)
set_property(TARGET led_matrix PROPERTY INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_LIST_DIR}/include)
set_property(TARGET led_matrix APPEND PROPERTY INTERFACE_LINK_LIBRARIES ${CMAKE_THREAD_LIBS_INIT})
