set(c_dir ${CMAKE_CURRENT_LIST_DIR}/portaudioc)
set(c_lib ${c_dir}/lib/libportaudio.a)
set(c_include_dir ${c_dir}/include)

set(cpp_dir ${CMAKE_CURRENT_LIST_DIR}/portaudiocpp)
set(cpp_lib ${cpp_dir}/lib/libportaudiocpp.a)
set(cpp_include_dir ${cpp_dir}/include)

find_library(librt rt)
if (NOT librt)
    message(FATAL_ERROR "Could not find librt.")
endif ()
find_library(libasound asound)
if (NOT libasound)
    message(FATAL_ERROR "Could not find libasound.")
endif ()
find_library(libjack jack)
if (NOT libjack)
    message(FATAL_ERROR "Could not find libjack.")
endif ()
find_library(libm m)
if (NOT libm)
    message(FATAL_ERROR "Could not find libm.")
endif ()
list(APPEND portaudioc_link_libs portaudioc ${CMAKE_THREAD_LIBS_INIT} ${librt} ${libasound} ${libjack} ${libm})

add_library(portaudioc STATIC IMPORTED GLOBAL)
set_property(TARGET portaudioc PROPERTY IMPORTED_LOCATION ${c_lib})
set_property(TARGET portaudioc PROPERTY INTERFACE_INCLUDE_DIRECTORIES ${c_include_dir})
set_property(TARGET portaudioc APPEND PROPERTY INTERFACE_LINK_LIBRARIES ${portaudioc_link_libs})

add_library(portaudiocpp STATIC IMPORTED GLOBAL)
set_property(TARGET portaudiocpp PROPERTY IMPORTED_LOCATION ${cpp_lib})  
set_property(TARGET portaudiocpp PROPERTY INTERFACE_INCLUDE_DIRECTORIES ${cpp_include_dir})  
set_property(TARGET portaudiocpp PROPERTY INTERFACE_LINK_LIBRARIES portaudioc)  
